--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,3 +1,10 @@
 {
-  "message": "hello i18n !!"
+  "message": "hello i18nasdasd !!",
+  "nav": {
+    "products": "Products",
+    "contact": "Contact Us"
+  },
+  "hero": {
+    "sub-heading": "Personal Protection Equipment"
+  }
 }
